changed my pop ups so that they meet the assignments requirements as well as switched up the wording on a lot of my messages. added a messages component so that css is constant through the program. slight fixes to some files to get rid of extra space

--- a/frontend/TeeForge Frontend/src/components/OrderForm.css
+++ b/frontend/TeeForge Frontend/src/components/OrderForm.css
@@ -67,7 +67,7 @@ input[type="radio"] {
   margin-right: 6px;
 }
 
-.message {
+/* .message {
   padding: 10px;
   margin: 15px 0;
   border-radius: 6px;
@@ -84,9 +84,9 @@ input[type="radio"] {
   background-color: #d4edda;
   color: #155724;
   border: 1px solid #c3e6cb;
-}
+} */
 
-.message.success {
+/* .message.success {
   background-color: #d4edda;
   color: #155724;
   border: 1px solid #c3e6cb;
@@ -96,7 +96,7 @@ input[type="radio"] {
   background-color: #f8d7da;
   color: #721c24;
   border: 1px solid #f5c6cb;
-}
+} */
 
 .shipping-form {
   display: flex;
